# hr-salary-insights-dashboard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  manage.py  pytest.ini  requirements-dev.txt  requirements.txt
backend/config/: asgi.py  health.py  settings.py  urls.py  wsgi.py
backend/config/tests/: test_cors.py  test_health.py
backend/employees/: apps.py  models.py  seed.py  seeding.py  serializers.py  signals.py  urls.py  views.py
backend/employees/data/: countries.txt  country_salary_bands.txt  first_names.txt  job_title_salary_tiers.txt  job_titles.txt  last_names.txt
backend/employees/migrations/: 0001_initial.py  0002_employee_country_employee_created_at_and_more.py  0003_employee_country_currency_defaults.py  0004_employee_insights_indexes.py
backend/employees/services/: insights.py  insights_cache.py
backend/health/: urls.py  views.py
backend/insights/: urls.py  views.py
data/: first_names.txt  last_names.txt
docs/: ARCHITECTURE.md  DECISIONS.md  ai-planning-log.md  ai-prompts.md  architecture.md  testing-strategy.md  tradeoffs.md
docs/adr/: 0001-insights-as-service-module.md  0002-views-then-viewset-refactor.md
docs/frontend/: design-system.md  ux-flows.md  visual-spec.md  wireframes.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
(+89 files in other folders)
