# Project-level Python tooling configuration.
# Lives at the repo root so the same config covers everything under `backend/`,
# and so pre-commit (also at the root) can find it without extra arguments.
#
# This file is intentionally not a Python package descriptor (no [project]
# table) because the backend is a Django application, not a distributable
# package.

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend"]
extend-exclude = [
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import order)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "DJ",   # flake8-django
    "ARG",  # flake8-unused-arguments
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length is enforced by the formatter
]

[tool.ruff.lint.per-file-ignores]
"backend/**/tests/**" = [
    "ARG",   # pytest fixtures may appear unused
    "S101",  # asserts are required in tests
]
"backend/**/migrations/*.py" = ["I", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["config", "employees"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
